content/kubernetes/configuration/kubectl/templates/external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: default
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 0
  selector: {}
---
apiVersion: v1
kind: Endpoints
metadata:
  name: my-service
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.0.101
    ports:
      - port: 80
        name: http
